[gd_scene load_steps=12 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Opponent/Opponent.tscn" type="PackedScene" id=2]
[ext_resource path="res://Ball/Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://Level/Level.gd" type="Script" id=4]
[ext_resource path="res://Assets/PoetsenOne-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/ping_pong_8bit_plop.ogg" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 642.596, 10 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 10, 490.261 )

[node name="Level" type="Node"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0784314, 0.129412, 0.14902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerScore" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 200.0
custom_fonts/font = SubResource( 1 )
text = "Player"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpponentScore" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0
custom_fonts/font = SubResource( 2 )
text = "Opponent"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountdownLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 300.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.760784, 0.247059, 0.12549, 1 )
text = "Count down"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WallTop" type="StaticBody2D" parent="."]
position = Vector2( -2.82843, -1.41418 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallTop"]
position = Vector2( 645.566, -11.1172 )
shape = SubResource( 4 )

[node name="WallBottom" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallBottom"]
position = Vector2( 643.907, 729.779 )
shape = SubResource( 4 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 1245, 360 )

[node name="Opponent" parent="." instance=ExtResource( 2 )]
position = Vector2( 35, 360 )

[node name="Ball" parent="." groups=[
"BallGroup",
] instance=ExtResource( 3 )]
position = Vector2( 640, 360 )

[node name="GoalLeft" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoalLeft"]
position = Vector2( -13.3256, 404.87 )
shape = SubResource( 5 )

[node name="GoalRight" type="Area2D" parent="."]
position = Vector2( 1311.69, 8.88652 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoalRight"]
position = Vector2( -13.3256, 404.87 )
shape = SubResource( 5 )

[node name="CountdownTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ScoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="body_entered" from="GoalLeft" to="." method="_on_GoalLeft_body_entered"]
[connection signal="body_entered" from="GoalRight" to="." method="_on_GoalRight_body_entered"]
[connection signal="timeout" from="CountdownTimer" to="." method="_on_CountdownTimer_timeout"]

[editable path="Player"]
[editable path="Opponent"]
[editable path="Ball"]
